middlewareDeployment/nexus/nexus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus-ns
  labels:
    app: nexus
spec:
  type: ClusterIP
  selector:
    app: nexus
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP
