middlewareDeployment/nexus/nexus-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nexus-gateway
  namespace: nexus-ns
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexus
  namespace: nexus-ns
spec:
  parentRefs:
    - name: nexus-gateway
      namespace: nexus-ns
  hostnames:
    - nexus.shixiaochuang.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nexus
          port: 8081
