middlewareDeployment/nexus/nexus-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nexus
  namespace: nexus-ns
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nexus.shixiaochuang.net`)
      kind: Rule
      services:
        - name: nexus
          port: 8081
